--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@ Aaron Dull</a>
 
 <h3>all de songs we knowes:</h3>
 <ul>
-	<li>halfstep trills</li>
-	<li>supercloud</li>
-	<li>little haze</li>
-	<li>keep me hangin on</li>
-	<li>shadowdance 9003</li>
-	<li>the jester</li>
-	<li>wildcard</li>
-	<li>sillyclone valley</li>
-	<li>circles</li>
-	<li>similar shirt</li>
-	<li>who set the world to grayscale?</li>
-	<li>we can move heaven and earth</li>
-	<li>glass castles</li>
-	<li>long way down</li>
-	<li>one and done</li>
-	<li>reptilian blink/full flavor vibrations</li></ul>
+	<li><a href="">halfstep trills</a></li>
+	<li><a href="">supercloud</a></li>
+	<li><a href="">little haze</a></li>
+	<li><a href="">keep me hangin on</a></li>
+	<li><a href="">shadowdance 9003</a></li>
+	<li><a href="">the jester</a></li>
+	<li><a href="">wildcard</a></li>
+	<li><a href="">sillyclone valley</a></li>
+	<li><a href="">circles</a></li>
+	<li><a href="">similar shirt</a></li>
+	<li><a href="">who set the world to grayscale?</a></li>
+	<li><a href="">we can move heaven and earth</a></li>
+	<li><a href="">glass castles</a></li>
+	<li><a href="">long way down</a></li>
+	<li><a href="">one and done</a></li>
+	<li><a href="">reptilian blink/full flavor vibrations</a></li></ul>
 <h3>songz we gon' learn:</h3>
 <ul>
-	<li>reptilian blink/full flavor vibrations</li>
-	<li>the love trap</li>
-	<li>word's sexiest troglodyte</li>
-	<li>diamond trees</li>
-	<li>the indigo room</li>
-	<li></li>
+	<li><a href="">reptilian blink/full flavor vibrations</a></li>
+	<li><a href="">the love trap</a></li>
+	<li><a href="">word's sexiest troglodyte</a></li>
+	<li><a href="">diamond trees</a></li>
+	<li><a href="">the indigo room</a></li>
+	<li><a href=""></a></li>
 	<li></li>
 	<li></li>
 	<li></li>
