--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 			<div class="container">
 <div><!-- left column -->
 
+
+<div>
+*this song is called75cents in nickels///// <br><br>
+
+Similar shirt 3<br>
+The jester 5<br>
+Wild card 4<br>
+Circles 4 <br><br>
+
+*Bank of america//////// <br><br>
+
+Reptilian vibrations 6<br>
+Shadowdance 3 <br><br>
+
+*subway///////// <br><br>
+
+Halfstep trills5<br>
+Silly clone 6<br>
+Lil haze 4<br>
+long way down 5 <br><br>
+
+*//////=dialog
+</div>
+
+
+
+
+
 	<!--
 		canvas1 similar shirt -->
 
