--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div><!-- left column -->
 
 
-<div>
+<div style="padding:3px;background-color:#bbffee;">
 *this song is called75cents in nickels///// <br><br>
 
 Similar shirt 3<br>
