--- a/index.html
+++ b/index.html
@@ -237,6 +237,23 @@ last sail                      A, F#m dorian<br>
 <div>Saturday Sept 11th</div>
 <div>fisherman's village, everett</div>
 
+<div>Saturday Sept 4th</div>
+<div>filming, Stanwood<br>
+sunset at 7:44pm<br>
+all hands meet at 6:30pm<br>
+address: 30410 24th Ave NW Stanwood<br>
+Master Jeremy say:<br>
+<div style="background-color:#002233;color:#ffbbdd;">
+Let me know if that is too early,
+We can make it work.
+I'll probably be there all day
+getting ready. This is my friemds
+place he probably wouldnt care if
+we camped or partied into the am<br><br>
+NOTE it would be ideal to know all the
+shadow dance lyrics so the lip sync
+doesnt look hacky</div></div>
+
 <div>Friday Sept 10th</div>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
