--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ function strumAChord(x, y, ctx) {
   }
 }
 	
-strumAChord(230, 00, ctx1);
+//strumAChord(230, 00, ctx1);
 
 /*
 function measureThreeBeatThree(a) {
