--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ Aaron Dull</a>
 	<li><a href="">diamond trees</a></li>
 	<li><a href="">the indigo room</a></li>
 	<li><a href=""></a></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li><a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view">nocturnstyle</a></li>
+	<li>aquatic wasteland</li>
+	<li>the bad 'ol days</li>
 	<li></li>
 	<li></li>
 	<li></li>
