--- a/index.html
+++ b/index.html
@@ -13,7 +13,55 @@
 			<div class="container">
 <div><!-- left column -->
 
+	<style>
+		div#div20211002 {
+		background-color:#ffeeff;
+		color:#004400;}
+	</style>
+	
+<div id="div20211002">
+	<a href="https://drive.google.com/file/d/1hULI4IzgB-QzvshqNrNMPcPEPgYYfdEu/view?usp=drivesdk
+">Aquatic Wasteland (working title)</a>
+	<a href="https://drive.google.com/file/d/1rdNE9nY7QFNdoMFYgPuTRskvBD5oSCBf/view?usp=drivesdk
+">Original demo</a>
 
+Verse
+Fmaj7.   Em. Am.  Dm
+
+Chorus
+F.   C.    Em.  F
+F.   C.    Em.  F.      A
+
+Bridge
+F.           C.           Dm
+Fmaj7.   Em.  Am
+
+
+	<a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view?usp=drivesdk
+">Nocturne</a>
+	(also a working title, could be "Nocturnstile", or  while im throwin ideas out maybe "nocturnity" or heck even "nocturnal eternity"  or shoot maybe " eternal nocturnity'
+
+D.        F# (cm6 on keys)     bm
+D.        F#                               bm
+
+Bm.     Bm/A.          E.             G
+
+Bb A.   
+ G.              Cm.              Em.               B7
+ G.              Cm.              Em.               B7.  Bb A
+D        D/C.          D/B.        D/Bb
+
+(Not done writing this down yet)
+
+	
+<a href="https://drive.google.com/file/d/1Jq-gFfU1-6ZiMfoxOcVbY92ra-mW5irT/view?usp=sharing">The Bad Old Days</a>
+C  D#    f#
+
+Gm
+
+	</div><!-- /div#div20211002 -->
+	
+	
 <div style="padding:3px;background-color:#bbffee;">
 *this song is called75cents in nickels///// <br><br>
 
