--- a/index.html
+++ b/index.html
@@ -20,45 +20,45 @@
 	</style>
 	
 <div id="div20211002">
-	<a href="https://drive.google.com/file/d/1hULI4IzgB-QzvshqNrNMPcPEPgYYfdEu/view?usp=drivesdk
+	<br><a href="https://drive.google.com/file/d/1hULI4IzgB-QzvshqNrNMPcPEPgYYfdEu/view?usp=drivesdk
 ">Aquatic Wasteland (working title)</a>
-	<a href="https://drive.google.com/file/d/1rdNE9nY7QFNdoMFYgPuTRskvBD5oSCBf/view?usp=drivesdk
+	<br><a href="https://drive.google.com/file/d/1rdNE9nY7QFNdoMFYgPuTRskvBD5oSCBf/view?usp=drivesdk
 ">Original demo</a>
 
-Verse
-Fmaj7.   Em. Am.  Dm
-
-Chorus
-F.   C.    Em.  F
-F.   C.    Em.  F.      A
-
-Bridge
-F.           C.           Dm
-Fmaj7.   Em.  Am
-
-
-	<a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view?usp=drivesdk
+<br>Verse
+<br>Fmaj7.   Em. Am.  Dm
+<br>
+<br>Chorus
+<br>F.   C.    Em.  F
+<br>F.   C.    Em.  F.      A
+<br>
+<br>Bridge
+<br>F.           C.           Dm
+<br>Fmaj7.   Em.  Am
+<br>
+<br>
+	<br><a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view?usp=drivesdk
 ">Nocturne</a>
-	(also a working title, could be "Nocturnstile", or  while im throwin ideas out maybe "nocturnity" or heck even "nocturnal eternity"  or shoot maybe " eternal nocturnity'
-
-D.        F# (cm6 on keys)     bm
-D.        F#                               bm
-
-Bm.     Bm/A.          E.             G
-
-Bb A.   
- G.              Cm.              Em.               B7
- G.              Cm.              Em.               B7.  Bb A
-D        D/C.          D/B.        D/Bb
-
-(Not done writing this down yet)
-
-	
-<a href="https://drive.google.com/file/d/1Jq-gFfU1-6ZiMfoxOcVbY92ra-mW5irT/view?usp=sharing">The Bad Old Days</a>
-C  D#    f#
-
-Gm
-
+	<br>(also a working title, could be "Nocturnstile", or  while im throwin ideas out maybe "nocturnity" or heck even "nocturnal eternity"  or shoot maybe " eternal nocturnity'
+<br>
+<br>D.        F# (cm6 on keys)     bm
+<br>D.        F#                               bm
+<br>
+<br>Bm.     Bm/A.          E.             G
+<br>
+<br>Bb A.   
+<br> G.              Cm.              Em.               B7
+<br> G.              Cm.              Em.               B7.  Bb A
+<br>D        D/C.          D/B.        D/Bb
+<br>
+<br>(Not done writing this down yet)
+<br>
+<br>	
+<br><a href="https://drive.google.com/file/d/1Jq-gFfU1-6ZiMfoxOcVbY92ra-mW5irT/view?usp=sharing">The Bad Old Days</a>
+<br>C  D#    f#
+<br>
+<br>Gm
+<br>
 	</div><!-- /div#div20211002 -->
 	
 	
