--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 	</style>
 	
 <div id="div20211002">
+
+<a href="https://drive.google.com/file/d/1yw7wsVo9xPzMcIoodj1FMFJXD9fJAAzm/view?usp=drivesdk">
+Forgot to send this, 
+<br>heres what I did that night Oct 2nd
+<br>
+<br>Added this epic section to the end to redeem myself after such a snoozy song jk
+</a>
+
 	<br><a href="https://drive.google.com/file/d/1hULI4IzgB-QzvshqNrNMPcPEPgYYfdEu/view?usp=drivesdk
 ">Aquatic Wasteland (working title)</a>
 	<br><a href="https://drive.google.com/file/d/1rdNE9nY7QFNdoMFYgPuTRskvBD5oSCBf/view?usp=drivesdk
