--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <!-- canvas -->
 
 <br>
+<br>
+<h3>10/12/2021</h3>
+<br><a href="20211012.txt">new song</a>
+<br>
 <h3>10/1/2021
   <br>A message from our divine dictator:</h3>
 <br>Forgot to send this, 
