--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
 	
 <div id="div20211002">
 
+
+<h3>10/12/2021</h3>
+<br><a href="20211012.txt">new song: Espionage A Trois </a>
+<br>
+
 <br>10/9/2021
   <br><canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas -->
 
 <br>
 <br>
-<h3>10/12/2021</h3>
-<br><a href="20211012.txt">new song</a>
-<br>
+
 <h3>10/1/2021
   <br>A message from our divine dictator:</h3>
 <br>Forgot to send this, 
