--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 <h3>10/12/2021</h3>
-<br><a href="20211012.txt">new song: Espionage A Trois </a>
+<a href="20211012.txt">new song: Espionage A Trois </a>
 <br>
 
 <br>10/9/2021
