--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@ let systemClefs = ['treble', 'bass'];
       let y2 = y1;
       drawLine(x1, y1, x2, y2, ctx20211015);
     }
-    if (systemClefs[ii]=='treble') {
-      drawTrebleClef();
+    if (systemClefs[ii] == 'treble') {
+      drawTrebleClef(10, 200*e+70*ii, ctx20211015);
     } else {
-      drawBassCleff();
+      drawBassClef(10, 200*e+70*ii, ctx20211015);
     }
   }
 }
