--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ let systemClefs = ['treble', 'bass'];
     for (i=0; i<5; i++) {
       let topMargin = 30;
       let x1 = 0;
-      let x2 = 400;
+      let x2 = canvas20211015.width;
       let y1 = topMargin+200*e+70*ii+10*i;
       let y2 = y1;
       drawLine(x1, y1, x2, y2, ctx20211015);
