--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Here's what I did that night Oct 2nd
 <br>
 <br>(Not done writing this down yet)
 <br>
-<br><canvas id="canvas20211014" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
+<br><canvas id="canvas20211014" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas20211014 -->
 <br>
 <br>	
@@ -391,41 +391,72 @@ steyel baynes
 
 <script>
 
-////NOCTURNESTYLE
-////////////////////_____ Mellotron intro
+////  NOCTURNESTYLE
+////  Mellotron intro
+////  20211014
 var canvas20211014 = document.getElementById("canvas20211014");
 var ctx20211014 = canvas20211014.getContext("2d");
-ctx20211009.fillStyle = "#eeeeff";
-ctx20211009.fillRect(0, 0, canvas20211009.width, canvas20211009.height);
-ctx20211009.fillStyle = "#003399";
-ctx20211009.fillText('Nocturnestyle', 20, 7);
+ctx20211014.fillStyle = "#eeeeff";
+ctx20211014.fillRect(0, 0, canvas20211014.width, canvas20211014.height);
+ctx20211014.fillStyle = "#003399";
+ctx20211014.fillText('Nocturnestyle', 20, 7);
+let clefs20211014 = ['treble', 'bass'];
+function drawBassClef(x, y, ctx) {
+  ctx.strokeStyle = "#000000";
+  ctx.lineWidth = 1;
+  ctx.beginPath();
+  ctx.arc(x, y, 4, 0, Math.PI*2, true);
+  ctx.closePath();
+  ctx.fill();
+  //reticle done
+  //begin main swoop
+  let x1 = x-2;
+  let x2 = x-2;
+  let x3 = x+10;
+  let x4 = x+5
+  let y1 = y;
+  let y2 = y-10;
+  let y3 = y-10;
+  let y4 = y+40;
+  ctx.beginPath();
+  ctx.moveTo(x1, y1);
+  ctx.bezierCurveTo(x2, y2, x3, y3, x4, y4);
+  ctx.bezierCurveTo(x3+4, y3, x2+4, y2-4, x1-4, y1-8);
+  ctx.fill();
+  for (i=0; i<2; i++) {
+    ctx.beginPath();
+    ctx.arc(x+20, y+10*i, 4, 0, Math.PI*2, true);
+    ctx.closePath();
+    ctx.fill();
+  }
+}
 for (e=0; e<3; e++) {
-    drawTrebleClef(10, 40+20+70*e, ctx20211009);
+  for (ii=0; ii<2; ii++) {
+    //  draw staff
     for (i=0; i<5; i++) {
-        drawLine(10, 30+10*i+70*e, 490, 30+10*i+70*e, ctx20211009);
+      let x1 = 10;
+      let x2 = 490;
+      let y1 = 30+10*i+160*e+70*ii;
+      let y2 = y1;
+      drawLine(x1, y1, x2, y2, ctx20211014);
     }
+    //  draw clef
+    if (clefs20211014[ii] == 'treble') {
+      drawTrebleClef(10, 40+20+70*e+70*ii, ctx20211014);
+    } else {
+      drawBassClef(10, 40+20+70*e+70*ii, ctx20211014);
+    }
+  }
 }
 let chords20211014 = [
-  ['D', 'F#(Cm6)', 'Bm',],
-  ['D', 'F#', 'Bm',],
-  ['Bm', 'Bm/A', 'E', 'G',],
-  ['Bb', 'A',],
-  ['G', 'Cm', 'Em',],
-  ['G', 'Cm', 'Em',],
+  ['D', 'F#(Cm6)', 'Bm'],
+  ['D', 'F#', 'Bm'],
+  ['Bm', 'Bm/A', 'E', 'G'],
+  ['Bb', 'A'],
+  ['G', 'Cm', 'Em'],
+  ['G', 'Cm', 'Em'],
   ['D', 'D/C', 'D/B', 'D/Bb']
 ];
-/*
->   D.        F# (cm6 on keys)     bm
-<br>D.        F#                               bm
-<br>
-<br>Bm.     Bm/A.          E.             G
-<br>
-<br>Bb A.   
-<br> G.              Cm.              Em.               B7
-<br> G.              Cm.              Em.               B7.  Bb A
-<br>D        D/C.          D/B.        D/Bb
-<br>
-*/
 let chords20211014x = [
   25, 65, 145, 205,
   265, 305, 385
@@ -434,7 +465,9 @@ for (i=0; i<chords20211014.length; i++) {
   ctx20211014.fillText(chords20211014[i], chords20211014x[i], 15);
 }
 
-////NEW AQUATIC WASTELAND
+////  NEW AQUATIC WASTELAND
+////  NEW AQUATIC WASTELAND
+////  20211009
 var canvas20211009 = document.getElementById("canvas20211009");
 var ctx20211009 = canvas20211009.getContext("2d");
 ctx20211009.fillStyle = "#eeeeff";
