--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	
 <div id="div20211002">
 <h3>10/15/2021</h3>
-<br><canvas id="canvas20211015" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
-<!-- canvas -->
+<br><canvas id="canvas20211015" width="500px" height="600px" style="border:1px solid #00445f;"></canvas>
+<!-- 10/15/2021 -->
 
 <h3>10/12/2021</h3>
 <a href="20211012.txt">new song: Espionage A Trois </a>
@@ -36,7 +36,7 @@
 
 <br>10/9/2021
   <br><canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
-<!-- canvas -->
+<!-- new aquatic wasteland -->
 
 <br>
 <br>
@@ -67,6 +67,7 @@ Here's what I did that night Oct 2nd
 <br>Fmaj7.   Em.  Am
 <br>
 <br>
+<!-- nocturnestyle -->
 	<br><a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view?usp=drivesdk
 ">Nocturne</a>
 	<br>(also a working title, could be "Nocturnstile", or  while im throwin ideas out maybe "nocturnity" or heck even "nocturnal eternity"  or shoot maybe " eternal nocturnity'
@@ -83,7 +84,7 @@ Here's what I did that night Oct 2nd
 <br>
 <br>(Not done writing this down yet)
 <br>
-<br><canvas id="canvas20211014" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
+<br><canvas id="canvas20211014" width="500px" height="550px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas20211014 -->
 <br>
 <br>	
@@ -143,40 +144,7 @@ important message from your keyboardist/flutist,
 Aaron Dull</a>
 <br><br>
 
-<h3>all de songs we knowes:</h3>
-<ul>
-	<li><a href="">halfstep trills</a></li>
-	<li><a href="">supercloud</a></li>
-	<li><a href="">little haze</a></li>
-	<li><a href="">keep me hangin on</a></li>
-	<li><a href="">shadowdance 9003</a></li>
-	<li><a href="">the jester</a></li>
-	<li><a href="">wildcard</a></li>
-	<li><a href="">sillyclone valley</a></li>
-	<li><a href="">circles</a></li>
-	<li><a href="">similar shirt</a></li>
-	<li><a href="">who set the world to grayscale?</a></li>
-	<li><a href="">we can move heaven and earth</a></li>
-	<li><a href="">glass castles</a></li>
-	<li><a href="">long way down</a></li>
-	<li><a href="">one and done</a></li>
-	<li><a href="">reptilian blink/full flavor vibrations</a></li></ul>
-<h3>songz we gon' learn:</h3>
-<ul>
-	<li><a href="">reptilian blink/full flavor vibrations</a></li>
-	<li><a href="">the love trap</a></li>
-	<li><a href="">word's sexiest troglodyte</a></li>
-	<li><a href="">diamond trees</a></li>
-	<li><a href="">the indigo room</a></li>
-	<li><a href=""></a></li>
-	<li><a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view">nocturnstyle</a></li>
-	<li>aquatic wasteland</li>
-	<li>the bad 'ol days</li>
-	<li></li>
-	<li></li>
-	<li></li>
-
-	<hr><hr><hr><hr>
+<hr><hr>
 </ul>
 
   <h3>__ setlist for 7/30 and 7/31 as of 7/29/2021</h3>
@@ -301,14 +269,16 @@ last sail                      A, F#m dorian<br>
 <br>
 <br>
 <br>
-<a href="page_filling_canvas.html">page_filling_canvas.html</a>
 <br>
 <br>
 <br>
 <br>
-</div><!-- /left column -->
-<div><!-- right column -->
+</div>
+<!-- /left column -->
 
+
+<!-- right column -->
+<div>
 
 		<h3>band calendar</h3>
 <div class="band-calendar">
@@ -368,34 +338,71 @@ doesnt look hacky</div></div>
 <div>July 17th</div>
 <div>Shedfest, stanwood</div>
 
-</div><!-- /div.band-calendar -->
-<hr><hr><hr><hr><hr><hr><hr>
-steyel baynes
+</div>
+<!-- /div.band-calendar -->
+
+<br>
+<hr>
+<h3>All the songs we know:</h3>
+<ul>
+	<li><a href="">halfstep trills</a></li>
+	<li><a href="">supercloud</a></li>
+	<li><a href="">little haze</a></li>
+	<li><a href="">keep me hangin on</a></li>
+	<li><a href="">shadowdance 9003</a></li>
+	<li><a href="">the jester</a></li>
+	<li><a href="">wildcard</a></li>
+	<li><a href="">sillyclone valley</a></li>
+	<li><a href="">circles</a></li>
+	<li><a href="">similar shirt</a></li>
+	<li><a href="">who set the world to grayscale?</a></li>
+	<li><a href="">we can move heaven and earth</a></li>
+	<li><a href="">glass castles</a></li>
+	<li><a href="">long way down</a></li>
+	<li><a href="">one and done</a></li>
+	<li><a href="">reptilian blink/full flavor vibrations</a></li>
+</ul>
+<h3>Songs we have to learn:</h3>
+<ul>
+	<li><a href="">reptilian blink/full flavor vibrations</a></li>
+	<li><a href="">the love trap</a></li>
+	<li><a href="">word's sexiest troglodyte</a></li>
+	<li><a href="">diamond trees</a></li>
+	<li><a href="">the indigo room</a></li>
+	<li><a href=""></a></li>
+	<li><a href="https://drive.google.com/file/d/1uihI3nvkZhSImCCl60MogUy4x1py4zCY/view">nocturnstyle</a></li>
+	<li>aquatic wasteland</li>
+	<li>the bad 'ol days</li>
+	<li></li>
+	<li></li>
+	<li></li>
+</ul>
+<hr>
+
 </div><!-- /right column -->
 </div><!-- /div.container -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script>
+////////////////////////////////////////////////////////////////////////////////
+////
+////      /////          //////     ////////     /////  ///////   //////////      /////
+////    ///            ///   ///    //    /////   ///   //    //  //////////    ///
+////  ///             ///      //   //      ///   ///   //    ///    ///      ///
+////  ///             ///           //      ///   ///   //   ///     ///      ///
+////    ////          ///           //    ////    ///   ///////      ///       ///
+////      ///////     ///           ///////       ///   //           ///        /////
+////           ///    ///           //  ////      ///   //           ///            ///
+////             ///  ///           //     ///    ///   //           ///              ///
+////             ///  ///       //  //      ///   ///   //           ///              ///
+////           ///      ///   ///   //      //    ///   //           ///            ///
+////       /////         //////     //       //  /////  //           ///       ///////
+////  
+////////////////////////////////////////////////////////////////////////////////
+</script>
 
 <script src="music-symbols.js"></script>
-
-
 <script>
 
-////  NOCTURNESTYLE
-////  Mellotron intro
-////  20211014
 ////10/15/2021
 var canvas20211015 = document.getElementById("canvas20211015");
 var ctx20211015 = canvas20211015.getContext("2d");
@@ -415,51 +422,23 @@ let systemClefs = ['treble', 'bass'];
       drawLine(x1, y1, x2, y2, ctx20211015);
     }
     if (systemClefs[ii] == 'treble') {
-      drawTrebleClef(10, 200*e+70*ii, ctx20211015);
+      drawTrebleClef(10, 200*e+70*ii+60, ctx20211015);
     } else {
-      drawBassClef(10, 200*e+70*ii, ctx20211015);
+      drawBassClef(10, 200*e+70*ii+35, ctx20211015);
     }
   }
 }
 
-////NOCTURNESTYLE
-////////////////////_____ Mellotron intro
+////  NOCTURNESTYLE
+////  Mellotron intro
+////  20211014
 var canvas20211014 = document.getElementById("canvas20211014");
 var ctx20211014 = canvas20211014.getContext("2d");
 ctx20211014.fillStyle = "#eeeeff";
 ctx20211014.fillRect(0, 0, canvas20211014.width, canvas20211014.height);
 ctx20211014.fillStyle = "#003399";
-ctx20211014.fillText('Nocturnestyle', 20, 7);
+ctx20211014.fillText('Nocturnestyle', 300, 7);
 let clefs20211014 = ['treble', 'bass'];
-function drawBassClef(x, y, ctx) {
-  ctx.strokeStyle = "#000000";
-  ctx.lineWidth = 1;
-  ctx.beginPath();
-  ctx.arc(x, y, 4, 0, Math.PI*2, true);
-  ctx.closePath();
-  ctx.fill();
-  //reticle done
-  //begin main swoop
-  let x1 = x-2;
-  let x2 = x-2;
-  let x3 = x+10;
-  let x4 = x+5
-  let y1 = y;
-  let y2 = y-10;
-  let y3 = y-10;
-  let y4 = y+40;
-  ctx.beginPath();
-  ctx.moveTo(x1, y1);
-  ctx.bezierCurveTo(x2, y2, x3, y3, x4, y4);
-  ctx.bezierCurveTo(x3+4, y3, x2+4, y2-4, x1-4, y1-8);
-  ctx.fill();
-  for (i=0; i<2; i++) {
-    ctx.beginPath();
-    ctx.arc(x+20, y+10*i, 4, 0, Math.PI*2, true);
-    ctx.closePath();
-    ctx.fill();
-  }
-}
 for (e=0; e<3; e++) {
   for (ii=0; ii<2; ii++) {
     //  draw staff
@@ -470,11 +449,13 @@ for (e=0; e<3; e++) {
       let y2 = y1;
       drawLine(x1, y1, x2, y2, ctx20211014);
     }
-    //  draw clef
+    //  draw clef & key
     if (clefs20211014[ii] == 'treble') {
-      drawTrebleClef(10, 40+20+70*e+70*ii, ctx20211014);
+      drawTrebleClef(10, 40+20+160*e+45*ii, ctx20211014);
+      drawKeySignature(35, 40+20+160*e+45*ii-10, -4, ctx20211014);
     } else {
-      drawBassClef(10, 40+20+70*e+70*ii, ctx20211014);
+      drawBassClef(10, 40+20+160*e+45*ii, ctx20211014);
+      drawKeySignature(35, 40+20+160*e+45*ii+25, -4, ctx20211014);
     }
   }
 }
@@ -492,7 +473,7 @@ let chords20211014x = [
   265, 305, 385
 ];
 for (i=0; i<chords20211014.length; i++) {
-  ctx20211014.fillText(chords20211014[i], chords20211014x[i], 15);
+  ctx20211014.fillText(chords20211014[i], chords20211014x[i], 15+160*i);
 }
 
 ////  NEW AQUATIC WASTELAND
