--- a/index.html
+++ b/index.html
@@ -26,20 +26,15 @@
 	</style>
 
 <div id="div20211002">
-<h3>10/16/2021</h3>
-<br><canvas id="canvas20211015" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
-<!-- canvas -->
-
-<h3>10/15/2021</h3>
-<br><canvas id="canvas20211015" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
-<!-- canvas -->
+	<!-- left column begins here -->
 
 <h3>10/12/2021</h3>
 <a href="20211012.txt">new song: Espionage A Trois </a>
 <br>
 
 <br>10/9/2021
-  <br><canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
+<h3>New Aquatic Wasteland:</h3>
+  <canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas -->
 
 <br>
@@ -89,6 +84,7 @@ Here's what I did that night Oct 2nd
 <br>
 <br><canvas id="canvas20211014" width="500px" height="1000px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas20211014 -->
+<!-- NOCTURNESTYLE -->
 <br>
 <br>
 <br><a href="https://drive.google.com/file/d/1Jq-gFfU1-6ZiMfoxOcVbY92ra-mW5irT/view?usp=sharing">The Bad Old Days</a>
@@ -397,10 +393,8 @@ steyel baynes
 
 <script>
 
-////  NOCTURNESTYLE
-////  Mellotron intro
-////  20211014
-////10/15/2021
+////  10/15/2021
+////  no title
 var canvas20211015 = document.getElementById("canvas20211015");
 var ctx20211015 = canvas20211015.getContext("2d");
 ctx20211015.fillStyle = "#eeeeff";
