--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <br>
 <br>
 
+<style>
+div.div20211001 {background-color: #bbcc77;}
+</style>
+<div class="div20211001">
 <h3>10/1/2021
   <br>A message from our divine dictator:</h3>
 <br>Forgot to send this,
@@ -94,7 +98,7 @@ Here's what I did that night Oct 2nd
 <br>
 
 
-
+</div><!-- /div.div20211001 -->
 	</div><!-- /div#div20211002 -->
 
 
