--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 <br>
 
 <style>
-div.div20211001 {background-color: #bbcc77;}
+div.div20211001 {
+  background-color: #bbcc77;
+  padding: 4px;
+}
 </style>
 <div class="div20211001">
 <h3>10/1/2021
