--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
 			<div class="container">
 <div><!-- left column -->
 
-	<style>
-		div#div20211002 {
-      background-color:#ffffff;
+  
+  <h3>10/12/2021</h3>
+  <a href="20211012.txt">new song: Espionage A Trois </a>
+  <br>
+  
+  <br>10/9/2021
+  <h3>New Aquatic Wasteland:</h3>
+  <canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
+  <!-- canvas -->
+  
+  <br>
+  <br>
+
+<style>
+    div#div20211002 {
+      background-color:#ffbbff;
       color:#004400;
       padding:6px;}
     div#div20211002 a {
@@ -23,32 +36,12 @@
       color:#ff4400;
       padding: 3px;
     }
-	</style>
-
-<div id="div20211002">
-	<!-- left column begins here -->
-
-<h3>10/12/2021</h3>
-<a href="20211012.txt">new song: Espionage A Trois </a>
-<br>
-
-<br>10/9/2021
-<h3>New Aquatic Wasteland:</h3>
-  <canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
-<!-- canvas -->
-
-<br>
-<br>
-
-<style>
-div.div20211001 {
-  background-color: #bbcc77;
-  padding: 4px;
-}
-</style>
-<div class="div20211001">
-<h3>10/1/2021
-  <br>A message from our divine dictator:</h3>
+  </style>
+  
+  <div id="div20211002">
+  
+  <h3>10/1/2021
+    <br>A message from our divine dictator:</h3>
 <br>Forgot to send this,
 <br><a href="https://drive.google.com/file/d/1yw7wsVo9xPzMcIoodj1FMFJXD9fJAAzm/view?usp=drivesdk">
 Here's what I did that night Oct 2nd
@@ -101,8 +94,6 @@ Here's what I did that night Oct 2nd
 <br>Gm
 <br>
 
-
-</div><!-- /div.div20211001 -->
 	</div><!-- /div#div20211002 -->
 
 
